--- a/package.json
+++ b/package.json
@@ -16,15 +16,22 @@
     "@tanstack/react-query-devtools": "^5.72.2",
     "antd": "^5.24.6",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.6.3",
     "i18next": "^24.2.3",
+    "js-cookie": "^3.0.5",
     "react": "^19.1.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.4.1",
+    "react-icons": "^5.5.0",
+    "react-pdftotext": "^1.3.4",
     "react-router-dom": "^7.5.0",
     "recoil": "^0.7.7",
-    "tailwindcss": "^4.1.3"
+    "tailwindcss": "^4.1.3",
+    "universal-cookie": "^8.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
