--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^12.6.3",
     "i18next": "^24.2.3",
     "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
