--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,10 +10,11 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "baseUrl": "./",
+    "noEmit": true,
     "paths": {
       "@/*": ["src/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "firebaseConfig.ts"],
   "exclude": ["node_modules", "dist"]
 }
